[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakdf"
dynamic = ["version"]
description = "Pseudonymisation/anonymisation engine with encrypted mapping storage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "frangs", email = "FGiordano-Silva@lambeth.gov.uk"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["cryptography", "pandas"]

[project.urls]
Repository = "https://github.com/frangs/cloakdf"
Documentation = "https://frangs.github.io/cloakdf/"

[project.entry-points.nbdev]
cloakdf = "cloakdf._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cloakdf.__version__"}

[tool.setuptools.packages.find]
include = ["cloakdf"]

[tool.nbdev]
